Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-138381

Putting QTableWidget in a QGraphicsScene breaks positioning of all widgets in cells

XMLWordPrintable

    • Windows
    • fe65df06c (dev), 579011c7e (6.10)

      Reproducer attached. A QTableWidget with some QWidget's is put into a QGraphicsScene.

      The problem is that scrolling the QTableWidget does not reposition its QWidget's. If you scroll the QTableWidget all the way to the right, you can see that QWidget's and cells are completely dislocated:

      And that is because cells are scrolled but QWidget's stay at where they were.

      The use case is that QGraphicsScene is practically the only way to transform a QWidget (a QTableWidget in this case) with reasonable effort. Overriding paintEvent also works but that can be too complicated. So what's being done in reproducer is not very uncommon.

        1. image-2025-07-09-15-47-05-180.png
          image-2025-07-09-15-47-05-180.png
          13 kB
        2. qtbug138381_diag.diff
          3 kB
        3. QTBUG-138381.7z
          0.9 kB
        4. qtbug138381.zip
          2 kB
        For Gerrit Dashboard: QTBUG-138381
        # Subject Branch Project Status CR V

            kleint Friedemann Kleint
            luqiaochen Luqiao Chen
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:

                There are no open Gerrit changes