Fix scrolling of QTableWidget within QGraphicsView

In the QGraphicsView branch of QWidget::scroll, scroll the children,
too.

Task-number: QTBUG-138381
Change-Id: I77cb9288d5b9630dca659d7ef987d11914ed1e43
Reviewed-by: Christian Ehrlicher <ch.ehrlicher@gmx.de>
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
(cherry picked from commit fe65df06c346086cccc658b0a42300766ffed12d)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>